<?xml version="1.0"?>
<package format="3">
  <name>runner</name>
  <version>0.0.0</version>
  <description>BT-based patrol behavior for autonomous robot</description>

  <maintainer email="hayeon@todo.todo">hayeon</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>behaviortree_cpp_v3</depend>
  <depend>pluginlib</depend>
  <depend>nav2_msgs</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <buildtool_depend>rosidl_default_generators</buildtool_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>


  <export>
    <build_type>ament_cmake</build_type>
    <pluginlib plugin="plugin.xml"/>
  </export>
</package>
